# sentence-matching-toolkit

./: .prettierignore  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.cjs  vite.config.ts
.github/workflows/: release.yml
libs/ts/store/: index.d.ts  index.min.js  index.mjs
public/: splashscreen.html  t2s-single-word.csv  t2s.txt
scripts/: winnat.ps1
src/: main.tsx  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/resources/: color.vb  csv2xlsx.vbs  jieba-per-dict.txt  snzxtw_rule.json  t2s-single-word.txt
src-tauri/src/: api.rs  commands.rs  main.rs
src-tauri/src/api/: category.rs  dict.rs  export.rs  mod.rs  rule.rs  shell.rs  sub_category.rs
src-tauri/src/handler/: category_handler.rs  csv_handler.rs  dict_handler.rs  jieba_handler.rs  mod.rs  regex_handler.rs  sub_category_handler.rs  t2s_handler.rs
src-tauri/src/utils/: classes.rs  errors.rs  matches.rs  mod.rs  old_records.rs  paths.rs  records.rs  rules.rs
src-tauri/src/utils/records/: base.rs  category.rs  mod.rs  sub_category.rs
src/api/: core.ts
src/assets/: Pending.tsx  config.ts  not-found.tsx  search.tsx
src/assets/descriptions/: Agreement.tsx  Book.tsx  DarkMode.tsx  Data.tsx  DownloadComputer.tsx  Excel.tsx  FileSetting.tsx  Focus.tsx  History.tsx
src/assets/illustrations/: Collaboration.tsx  NoFile.tsx  NotFound.tsx  Pending.tsx  Processing.tsx  Searching.tsx
src/assets/navigations/: Addition.tsx  AdditionFilled.tsx  Branch.tsx  BranchFilled.tsx  Building.tsx  BuildingFilled.tsx  Download.tsx  DownloadFilled.tsx  Info.tsx  InfoFilled.tsx  Setting.tsx  SettingFilled.tsx
src/assets/operations/: Delete.tsx  Edit.tsx  Return.tsx
src/assets/others/: Spin.tsx
src/components/: ListItem.tsx  ListItemButton.tsx  ListItemToggle.tsx  Skeleton.tsx
src/components/Interaction/: ButtonGroup.tsx  SearchInput.tsx
src/components/list/: ListItem.tsx  ListItemButton.tsx  ListItemDrop.tsx  ListItemToggle.tsx
src/components/loading/: IdlePlaceholder.tsx  Skeleton.tsx
src/components/theme/: ThemeProvider.tsx  index.ts  useThemeContext.ts
src/components/transition/: ListMotion.tsx  PageMotion.tsx
src/middleware/: cache.ts  logger.ts  message.ts  store.ts  utils.ts
src/middleware/storeApi/: index.ts
src/pages/About/: index.tsx
src/pages/Category/: CategoryButtonGroup.tsx  (+4 more)
src/routes/: AnimationLayout.tsx  RouterView.tsx  router.config.tsx
(+25 files in other folders)
