[package]
name = "snzx-tw-statistic"
version = "0.2.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = {version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = {version = "1.2", features = ["clipboard-write-text", "dialog-all", "fs-all", "os-all", "path-all", "shell-open", "window-all"] }
tauri-plugin-store = { path = "../libs/rust/store" }
csv = "1.1"
jieba-rs = "0.6"
strsim = "0.10.0"
ngrammatic = "0.4.0"
rust-embed="6.4.2"
chrono = "0.4.23"
indexmap = {version = "1.9.2", features = ["serde-1"] }
rayon = "1.6.1"
thiserror = "1.0"
anyhow = "1.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
